tests/golden/compile-pass/function_forward_reference.rua
fn caller() -> i64 { callee() }
fn callee() -> i64 { 42 }
