tests/golden/compile-fail/type_coalesce_non_option.rua
fn invalid() -> i64 {
    1 ?? 2
}
